[_sass/_masthead.scss] Fix aligment of top nav bar so that it aligns with the sidebar

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -1,26 +1,53 @@
+/* ==========================================================================
+   MASTHEAD
+   ========================================================================== */
+
 .masthead {
   position: relative;
-  width: 100vw;      // full viewport width
   border-bottom: 1px solid $border-color;
+  -webkit-animation: intro 0.3s both;
+          animation: intro 0.3s both;
+  -webkit-animation-delay: 0.15s;
+          animation-delay: 0.15s;
   z-index: 20;
-  background-color: background-color;
 
   &__inner-wrap {
-    width: 100%;
-    max-width: 100%;
-    margin: 0;
-    padding: 1em 2em;
-    padding-left: 17.45em;  // adjust to match sidebar
-    //padding-right: 2em; // keep right padding if needed
+    @include container;
     @include clearfix;
+    padding: 1em 1em 1em;
     font-family: $sans-serif-narrow;
 
+    @include breakpoint($x-large) {
+      max-width: $x-large;
+    }
+
     nav {
-      width: 100%;   // full-width nav
+      z-index: 10;
     }
 
     a {
       text-decoration: none;
     }
+  }
+}
+
+.masthead__menu {
+
+  ul {
+    margin: 0;
+    padding: 0;
+    clear: both;
+    list-style-type: none;
+  }
+}
+
+.masthead__menu-item {
+  display: block;
+  list-style-type: none;
+  white-space: nowrap;
+
+  &--lg {
+    padding-right: 2em;
+    font-weight: 700;
   }
 }
